--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Nabin Basnet </title>
+    <title> Nabin Basnet </title>
     <link rel="stylesheet" href="style.css">
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -17,7 +17,7 @@
   <!-- navgaition menu -->
   <nav>
     <div class="navbar">
-      <div class="logo"><a href="#">Nabin.</a></div>
+      <div class="logo"><a href="#">Nabin Basnet.</a></div>
       <ul class="menu">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -31,8 +31,8 @@
       <div class="media-icons">
         <a href="https://www.facebook.com/profile.php?id=100085861646265"><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/Nishan-Pradhan06"><i class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/pradhan_nishan_16/?hl=en"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/nabin1200"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/nabin_basnet01/?hl=en"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
     <div class="menu-btn">
@@ -45,7 +45,7 @@
    <div class="home-content">
      <div class="text">
        <div class="text-one">Hello,</div>
-       <div class="text-two">I'm Nabin Basnet</div>
+       <div class="text-two">I'm Nabin Basnet.</div>
        <div class="text-three">BCA Student</div>
        <div class="text-four">From Nepal</div>
      </div>
@@ -61,11 +61,11 @@
     <div class="title"><span>About Me</span></div>
  <div class="about-details">
     <div class="left">
-      <img src="img/pp1.jpg" alt="images">
+      <img src="nabin's photo.jpg" alt="images">
     </div>
     <div class="right">
       <div class="topic">Deveploping Is My Passion</div>
-      <p>Hi! I am Nabin Basnet from Morang, Nepal. I have recently completed my plus 2 education and am currently studying for my Bachelor's degree in Computer Application (BCA). Alongside my studies, I have been learning about Flutter cross-platform application development. I am passionate about technology and have been working on a project related to app development using flutter. I am excited to continue learning and growing in this field and hope to make a positive impact in the world of technology.</p>
+      <p>Hi! I am Nabin Basnet from Morang, Nepal. I have recently completed my plus 2 education and am currently studying for my Bachelor's degree in Computer Application (BCA). Alongside my studies, I have been learning about JS cross-platform application development. I am passionate about technology a. I am excited to continue learning and growing in this field and hope to make a positive impact in the world of technology.</p>
      <div class="button">
         <a href=""><button>Download CV</button></a>
       </div>
@@ -102,8 +102,7 @@
          <div class="per">15%</div>
        </div>
        <div class="box">
-         <div class="topic">Flutter</div>
-         <div class="per">15%</div>
+        
        </div>
      </div>
    </div>
@@ -172,19 +171,19 @@
         <i class="fas fa-map-marker-alt"></i>
         <div class="topic">Address</div>
         <div class="text--two">Morang</div>
-        <div class="text--two">Belbari-11-Laxmimarga</div>
+        <div class="text--two">Belbari-10-baryatizar</div>
       </div>
       <div class="phone details">
         <i class="fas fa-phone-alt"></i>
         <div class="topic">Phone</div>
         <!-- <div class="text-one"></div> -->
-        <div class="text--two">+977 9817326306</div>
+        <div class="text--two">+977 9815326723</div>
       </div>
       <div class="email details">
         <i class="fas fa-envelope"></i>
         <div class="topic">Email</div>
         <!-- <div class="text-one"></div> -->
-        <div class="text--two">nishanpradhan500@gmail.com</div>
+        <div class="text--two">nabinbasnet1200@gmail.com</div>
       </div>
     </div>
     <div class="right-side">
@@ -213,7 +212,7 @@
 <!-- Footer Section Start -->
 <footer>
   <div class="text">
-    <span><a href="#">nishanpradhan.com.np</a> | &#169; 2023 All Right Reserve</span>
+    <span><a href="#">sahabirjangbasnet.com.np</a> | &#169; 2023 All Right Reserve</span>
   </div>
 </footer>
 
